Pokemon/style.css
:root{
  margin: 0px;
  padding: 0px;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;
}
p{
  font-family: 'poppins', sans-serif;
  font-weight: 400;
  font-size: 24px;
}
#logo{
  width: 500px;
}

#buttons{
  display: flex;
}
button{
  display: flex;
  justify-content: center;
  font-family: 'poppins', sans-serif;
  border:  4px solid #f8c444;
  border-radius: 5px;
  color: #f8c444;
  font-size: 20px;
  padding: 10px;
  margin: 10px;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: color, background-color;
  transition-property: color, background-color;
  
}

button:hover{
color: #ffffff;
background: #f8c444;
border-color: #f8c444;
transition: all 0.4s ease 0s; 
cursor: pointer;
}


.pokemonGrid {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.scene {
  width: 200px;
  height: 260px;
  margin: 10px;
  perspective: 600px;
  border-radius: 5px;
}

.card {
  width: 100%;
  height: 100%;
  transition: transform 1s;
  transform-style: preserve-3d;
  cursor: pointer;
  position: relative;
}

.card.is-flipped {
  transform: rotateY(180deg);
}

.card__face {
  position: absolute;
  width: 100%;
  height: 100%;
  color: white;
  text-align: center;
  font-weight: bold;
  backface-visibility: hidden;
  border-radius: 5px;
}

.card__face--front {
  background:  #e03a3e;
}

.card__face--back {
  background: #f8c444;
  transform: rotateY(180deg);
}
.frontImg{
  width: 150px;
  margin-top: 20px;
}
.pokeP{
  font-size: 25px;
  font-family: 'poppins', sans-serif;
  font-weight: 400;
}

li {
  text-align: left;
  font-family: 'poppins', sans-serif;
  font-weight: 400;
  margin: 0px;
}
ul{
  margin: 0px;
}

.basicP{
  font-size: 20px;
  font-family: 'poppins', sans-serif;
  font-weight: 700;
  margin: 0px;
  margin-top: 10px;
}
.infoP{
  font-size: 15px;
  margin: 0px;
  padding: 0px;
  text-align: left;
  padding-inline-start: 40px;
}

